update:excle 模版工具支持图片 update:common.js中添加dowload post下载方法 update:完善字典为多级树节点时的使用方式 update:字典添加参数

--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/functions/dict/radio.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/functions/dict/radio.html
@@ -1,7 +1,7 @@
 <div class="form-control">
 <%for(item in list){%>
 <div style="display: inline-block; padding-right: 20px;" >
-    <input ${attrs} class="${class} dict-radio" id="${item.domId}" key-val="${item.val}" name="name_${onlyName}" type="radio" value="${item.id}">
+    <input ${attrs} class="${class} dict-radio" id="${item.domId}" value="${item[dto.defaualtValueField]}" key-val="${item.val}" id-val="${item.id}" name="name_${onlyName}" type="radio">
     <label for="${item.domId}">${item.lable}</label>
 </div>
 <%}%>
