--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/message/news/lookMore.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/message/news/lookMore.html
@@ -4,7 +4,7 @@ layout("/layouts/blank.html",{title:title}){
 %>
 <style type="text/css">
 </style>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <div style="height: 40px">
         <form class="searchFrom">
             <div class="input-group">
@@ -32,7 +32,7 @@ layout("/layouts/blank.html",{title:title}){
             fromData: {},
             fromDataSubmit: false,
             fromDataEdit: true,
-            initLoad: false,
+
             synchronizeType: 0,
             searchData: {
                 key: ''
@@ -52,7 +52,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         },
         mounted: function () {
             var sys_news_category = JSON.parse('${data.sys_news_category}');
