--- a/nutzfw-web-user-front/src/main/webapp/WEB-INF/view/modules/front/inc/header.html
+++ b/nutzfw-web-user-front/src/main/webapp/WEB-INF/view/modules/front/inc/header.html
@@ -16,4 +16,8 @@
 <!--必须的组件 结束-->
 <script>
     var base="${base}";
+    Vue.filter('dictDesc', function (value, vm, fieldName, sysCode, defaualtValueField, vm) {
+        return core.dictDesc(value, vm, fieldName, sysCode, defaualtValueField);
+    });
+
 </script>
