--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/functions/dict/checkbox.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/functions/dict/checkbox.html
@@ -1,6 +1,6 @@
 <%for(item in list){%>
 <div style="display: inline-block; padding-right: 20px;">
-    <input ${attrs} class="${class} dict-checkbox" id="${item.domId!}" key-val="${item.val}" type="checkbox" value="${item.id}">
+    <input ${attrs} class="${class} dict-checkbox" id="${item.domId!}" value="${item[dto.defaualtValueField]}" key-val="${item.val}" id-val="${item.id}" type="checkbox">
     <label for="${item.domId!}">${item.lable}</label>
 </div>
 <%}%>
