--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/message/news/index.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/message/news/index.html
@@ -10,7 +10,7 @@ layout("/layouts/blank.html",{title:title}){
         <small>控制面板</small>
     </h1>
 </section>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <div style="height: 40px">
         <form class="searchFrom">
             <div class="input-group">
@@ -79,7 +79,7 @@ layout("/layouts/blank.html",{title:title}){
             fromData: {},
             fromDataSubmit: false,
             fromDataEdit: true,
-            initLoad: false,
+
             synchronizeType: 0,
             searchData: {
                 key: ''
@@ -140,7 +140,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         },
         mounted: function () {
             var sys_news_category = JSON.parse('${data.sys_news_category}');
