--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/data/maintain/singleIndex.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/data/maintain/singleIndex.html
@@ -29,7 +29,7 @@ layout("/layouts/blank.html",{title:title}){
         margin: 5px;
     }
 </style>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <div class="col-sm-2" style="min-width: 150px;">
         <div class="ztree" id="dbTree"></div>
     </div>
@@ -139,7 +139,7 @@ layout("/layouts/blank.html",{title:title}){
             fromData: {},
             selectNode: undefined,
             fromDataSubmit: false,
-            initLoad: false,
+
             importType: 0,
             tableType: 0,
             uniqueField: 0,
@@ -382,7 +382,7 @@ layout("/layouts/blank.html",{title:title}){
                 }
             },
         created: function () {
-            this.initLoad = true;
+
         },
         updated: function () {
         },
