--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/data/maintain/user/manager.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/data/maintain/user/manager.html
@@ -13,7 +13,7 @@ layout("/layouts/blank.html",{title:title}){
         <small>控制面板</small>
     </h1>
 </section>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <div style="background: #ffffff">
         <div id="listTable" lay-filter='listTable'></div>
     </div>
@@ -29,7 +29,7 @@ layout("/layouts/blank.html",{title:title}){
             fromData: {},
             fromDataSubmit: false,
             fromDataEdit: true,
-            initLoad: false,
+
         },
         methods: {
             handleEdit: function (data) {
@@ -43,7 +43,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         },
         updated: function () {
         },
