--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/data/query/advancedSearch.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/data/query/advancedSearch.html
@@ -66,7 +66,7 @@ layout("/layouts/blank.html",{title:title}){
         width: 100%;
     }
 </style>
-<section id="container" v-if="initLoad">
+<section id="container" v-cloak>
     <div class="b-content">
         <div class="b-left">
             <div class="b-ztree-box">
@@ -208,7 +208,7 @@ layout("/layouts/blank.html",{title:title}){
         el: '#container',
         data: {
             lastCndText: "",
-            initLoad: false,
+
         },
         methods: {
             fullScreen: function () {
@@ -324,7 +324,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         },
         updated: function () {
 
