--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/dynamicfrom/edit_1.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/dynamicfrom/edit_1.html
@@ -81,7 +81,7 @@ layout("/layouts/blank.html",{title:title}){
         padding: 5px;
     }
 </style>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <div class="from-box">
         <form role="form" method="post" name="form1" id="form1">
             <div v-if="hasAnyDisplay">
