--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/organize/job/index.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/organize/job/index.html
@@ -27,7 +27,7 @@ layout("/layouts/blank.html",{title:title}){
         <small>控制面板</small>
     </h1>
 </section>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <%if(so.hasPermission("sysOrganize.job.index")){%>
     <table class="searchBox">
         <tr>
@@ -129,7 +129,7 @@ layout("/layouts/blank.html",{title:title}){
             },
             fromDataSubmit: false,
             fromDataEdit: true,
-            initLoad: false,
+
             deptids: [],
             deptnames: [],
             jobids: [],
@@ -292,7 +292,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         },
         updated: function () {
         },
