--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/organize/user/index.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/organize/user/index.html
@@ -51,7 +51,7 @@ layout("/layouts/blank.html",{title:title}){
         margin: 0;
     }
 </style>
-<section class="content autoHeight" id="container" v-if="initLoad" style="height: 100%">
+<section class="content autoHeight" id="container" v-cloak style="height: 100%">
     <div class="col-sm-2" style="min-width: 150px;height: 100%;padding: 0px;">
         <div style="margin-left: 5px">
             <%if(so.hasPermission("sysAccount.add")){%>
@@ -232,7 +232,7 @@ layout("/layouts/blank.html",{title:title}){
             },
             fromDataSubmit: false,
             fromDataEdit: true,
-            initLoad: false,
+
             selectedUserIds: [],
             selectedRoleIds: []
         },
@@ -692,7 +692,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         },
         updated: function () {
         },
