--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/organize/userReview/index.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/organize/userReview/index.html
@@ -29,7 +29,7 @@ layout("/layouts/blank.html",{title:title}){
         position: fixed;
     }
 </style>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <div class="layui-tab  layui-tab-brief" lay-filter="layui-tab">
         <ul class="layui-tab-title">
             <li class="layui-this">待审核</li>
@@ -119,7 +119,7 @@ layout("/layouts/blank.html",{title:title}){
             fromData: {},
             fromDataSubmit: false,
             fromDataEdit: true,
-            initLoad: false,
+
             reviewOpinion: "",
             sourceUrl: "",
             batchAgreeReview: false,
@@ -276,7 +276,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         },
         updated: function () {
         },
