--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/setting/attach/index.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/setting/attach/index.html
@@ -10,7 +10,7 @@ layout("/layouts/blank.html",{title:title}){
         <small>控制面板</small>
     </h1>
 </section>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <!-- <ul>
          <li>待开发</li>
          <li>实体类：com.nutzfw.modules.sys.entity.FileAttach</li>
