--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/user/changePass.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/user/changePass.html
@@ -22,7 +22,7 @@ layout("/layouts/blank.html",{title:title}){
         <small>控制面板</small>
     </h1>
 </section>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <div class="from-box">
         <form role="form" method="post" name="form1" id="form1">
             <div class="box box-info">
@@ -102,7 +102,7 @@ layout("/layouts/blank.html",{title:title}){
                 avatarDesc: "${base!}/File/avatar?id=${session.me.avatar!}",//头像
             },
             fromDataSubmit: false,
-            initLoad: false,
+
         },
         methods: {
             handleChangeAvatar: function () {
@@ -149,7 +149,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         },
         updated: function () {
         },
