--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/user/fristLoginChangePass.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/user/fristLoginChangePass.html
@@ -26,7 +26,7 @@ layout("/layouts/blank.html",{title:title}){
 
 
 </style>
-<section class="content" id="container" v-if="initLoad">
+<section class="content" id="container" v-cloak>
     <div class="from-box">
         <form role="form" method="post" name="form1" id="form1">
             <div class="box box-info">
@@ -74,7 +74,7 @@ layout("/layouts/blank.html",{title:title}){
                 repeatNewPass: "",
             },
             fromDataSubmit: false,
-            initLoad: false,
+
         },
         methods: {
             handleSubmit: function () {
@@ -98,7 +98,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         }
     });
 </script>
