--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/user/scheduleIndex.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/sys/user/scheduleIndex.html
@@ -7,7 +7,7 @@ layout("/layouts/blank.html",{title:title}){
         color: red;
     }
 </style>
-<section id="container" v-if="initLoad">
+<section id="container" v-cloak>
     <div class="col-sm-2" style="min-width: 150px;">
         <div class="ztree" id="dbTree"></div>
     </div>
@@ -24,7 +24,7 @@ layout("/layouts/blank.html",{title:title}){
             fromData: {},
             selectNode: undefined,
             fromDataSubmit: false,
-            initLoad: false,
+
             tableId:""
         },
         methods: {
@@ -116,7 +116,7 @@ layout("/layouts/blank.html",{title:title}){
             }
         },
         created: function () {
-            this.initLoad = true;
+
         },
         updated: function () {
         },
