update: 若干细节优化 add: 解决字典重复请求后台

--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/inc/header.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/inc/header.html
@@ -65,7 +65,7 @@
 <script type="text/javascript" src="${base!}/static/plugins/imageview/viewer1.0.js?_=${productVersion}"></script>
 <script>
     var base = "${base!}";
-    Vue.filter('dictDesc', function (value, vm, fieldName, sysCode, defaualtValueField, vm) {
+    Vue.filter('dictDesc', function (value, vm, fieldName, sysCode, defaualtValueField) {
         return core.dictDesc(value, vm, fieldName, sysCode, defaualtValueField);
     });
 
